--- a/web/Header/Header.module.scss
+++ b/web/Header/Header.module.scss
@@ -1,6 +1,7 @@
 .pug {
   background: #ffffff url('./pug-cover.jpg') no-repeat left center;
   height: 200px;
+  background-size: cover;
 }
 .pugHeading {
   color: #ffffff;
